--- a/train-interfaces/pom.xml
+++ b/train-interfaces/pom.xml
@@ -5,9 +5,19 @@
 	<artifactId>hu.bme.mit.train.interfaces</artifactId>
 	<version>0.5.0-SNAPSHOT</version>
 
+   
     <parent>
         <artifactId>hu.bme.mit.train</artifactId>
         <groupId>hu.bme.mit.train</groupId>
         <version>0.5.0-SNAPSHOT</version>
     </parent>
+
+     <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.1-jre</version>
+        </dependency>
+    </dependencies>
+
 </project>
